Fix - add to cart alignment issue on equal heignt and changed label of quick view settings.

--- a/includes/blocks/product-carousel/assets/css/product-carousel.css
+++ b/includes/blocks/product-carousel/assets/css/product-carousel.css
@@ -205,6 +205,9 @@
     grid-auto-flow: column;
     background: #fff;
 }
+.wpmozo-product-carousel-wrap.default.equal-slide-height .wpmozo-add-to-cart-wrap{
+	width: 100%;
+}
 
 @media (min-width: 767px) {
 	.wpmozo-loader.backend{
